--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -29,9 +29,9 @@
       <a href="" class="brand-logo" style="padding-left: 20pt;"><img src="https://www.nobelprize.org/images/logo-nobelprize_org.png" height="30pt"></a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
+        <li><a href="badges.html"><i class="material-icons">comment</i></a></li>
+        <li><a href="collapsible.html"><i class="material-icons">settings</i></a></li>
+        <li><a href="mobile.html"><i class="material-icons">mail</i></a></li>
       </ul>
     </div>
   </nav>
@@ -46,7 +46,7 @@
 
             <span class="card-title">
               <figure class="card-profile-image">
-                  <img src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator">
+                  <img src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 230px; height: 230px";
               </figure>
             </span>
           </div>
@@ -69,11 +69,16 @@
         <div class="col s4 m4">
           <div class="card-panel white">
             <span class="grey-text">
-              This is going to be a hardcoded bio summary.
+              This is going to be a hardcoded(???) bio summary.
             </span>
           </div>
         </div>
-        <div class="col s12 m7">
+
+        <!-- FRIENDS LIST -->
+
+        <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
+
+        <div class="col s6 m7">
           <div class="card">
             <div class="card-image">
               <img src="images/sample-1.jpg">
