Adds friends list

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -72,6 +72,19 @@
               This is going to be a hardcoded(???) bio summary.
             </span>
           </div>
+
+          <div class="card-panel white">
+            <span class="grey-text friend-container">
+              <div tooltip="Martin Luther King Jr. " tooltip-persistent><img class="image" src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="picture"/> </div>
+              <img class="image" src="../frontEnd/app/src/resources/mlk-resources/monthly05.jpg" alt="picture2"/>
+              <img class="image" src="../frontEnd/app/src/resources/mlk-resources/martin-luther-king-and-coretta-scott-king.jpg" alt="picture3"/>
+              <div tooltip="Dylan Oshima" tooltip-persistent><img class="image" src="../frontEnd/app/src/resources/testImage.jpg" alt="picture"/></div>
+              <img class="image" src="../frontEnd/app/src/resources/mlk-resources/martin-luther-king-and-coretta-scott-king.jpg" alt="picture3"/>
+              <img class="image" src="../frontEnd/app/src/resources/testImage.jpg" alt="picture"/>
+              <img class="image" src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="picture"/>
+              <div tooltip="Martin Luther King Hanging out with his homies yo." tooltip-persistent><img class="image" src="../frontEnd/app/src/resources/mlk-resources/monthly05.jpg" alt="picture2"/></div>
+            </span>
+          </div>
         </div>
 
         <!-- FRIENDS LIST -->
