Basic working version

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -14,7 +14,7 @@
   <!-- Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <!-- Ajax -->
+  <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Connected JS File -->
@@ -67,11 +67,16 @@
         </div>
 
         <div class="col s4 m4">
+
+          <!-- BIOGRAPHY -->
+
           <div class="card-panel white">
             <span class="grey-text">
               This is going to be a hardcoded(???) bio summary.
             </span>
           </div>
+
+          <!-- FRIENDS LIST -->
 
           <div class="card-panel white">
             <span class="grey-text friend-container">
@@ -87,17 +92,54 @@
           </div>
         </div>
 
-        <!-- FRIENDS LIST -->
-
         <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
 
         <div class="col s6 m7">
+          <div class="card">
+            <div class="card-content">
+              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <i class="material-icons">comment</i>
+              <i class="material-icons">thumb_up</i>
+              <i class="material-icons">share</i>
+            </div>
+          </div>
+
           <div class="card">
             <div class="card-image">
               <img src="images/sample-1.jpg">
             </div>
             <div class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+            </div>
+            <div class="card-action">
+              <i class="material-icons">comment</i>
+              <i class="material-icons">thumb_up</i>
+              <i class="material-icons">share</i>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <img src="../frontEnd/app/src/resources/mlk-resources/lyndon-b-johnson-mlk.jpg" alt="Lyndon B Johnsons"/>
+            </div>
+            <div class="card-content">
+              <p>This is a very standard image card that can be seen. </p>
+            </div>
+            <div class="card-action">
+              <i class="material-icons">comment</i>
+              <i class="material-icons">thumb_up</i>
+              <i class="material-icons">share</i>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-image">
+              <iframe align-content="center" width="560" height="315" src="https://www.youtube.com/embed/5r98tT0j1a0" frameborder="0" allowfullscreen></iframe>
+            </div>
+            <div class="card-content">
+              <p>A basic video card. This is one I stole on youtube that has whats his face in it.</p>
             </div>
             <div class="card-action">
               <i class="material-icons">comment</i>
