--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -2,9 +2,6 @@
 <html>
 
 <head>
-  <!-- Compiled and minified CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-
   <!-- Style Sheet -->
   <link rel="stylesheet" href="app.css">
 
@@ -16,9 +13,16 @@
 
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
   <!-- Connected JS File -->
-  <script src="app.js"></script>
+  <!-- <script src="./app.js"></script> -->
+
+  <!-- Connected JS File -->
+  <script src="./feed.js"></script>
 </head>
 
 <body>
@@ -46,7 +50,7 @@
 
             <span class="card-title">
               <figure class="card-profile-image">
-                  <img src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 230px; height: 230px";
+                  <img src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 250px; height: 200px;";
               </figure>
             </span>
           </div>
@@ -72,8 +76,11 @@
 
           <div class="card-panel white">
             <span class="grey-text">
-              This is going to be a hardcoded(???) bio summary.
+              <h4 style="color:black;">Martin Luther King, Jr.</h4> (January 15, 1929-April 4, 1968) was born Michael Luther King, Jr., but later had his name changed to Martin. His grandfather began the family's long tenure as pastors of the Ebenezer Baptist Church in Atlanta, serving from 1914 to 1931; his father has served from then until the present, and from 1960 until his death Martin Luther acted as co-pastor.<div class="content hideContent"> Martin Luther attended segregated public schools in Georgia, graduating from high school at the age of fifteen; he received the B. A. degree in 1948 from Morehouse College, a distinguished Negro institution of Atlanta from which both his father and grandfather had graduated. After three years of theological study at Crozer Theological Seminary in Pennsylvania where he was elected president of a predominantly white senior class, he was awarded the B.D. in 1951. With a fellowship won at Crozer, he enrolled in graduate studies at Boston University, completing his residence for the doctorate in 1953 and receiving the degree in 1955. In Boston he met and married Coretta Scott, a young woman of uncommon intellectual and artistic attainments. Two sons and two daughters were born into the family. </div>
             </span>
+            <div class="show-more">
+                <a href="#">Show more</a>
+            </div>
           </div>
 
           <!-- FRIENDS LIST -->
@@ -94,6 +101,7 @@
 
         <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
 
+        <!-- Text Card -->
         <div class="col s6 m7">
           <div class="card">
             <div class="card-content">
@@ -106,12 +114,13 @@
             </div>
           </div>
 
+          <!-- Image Card -->
           <div class="card">
             <div class="card-image">
-              <img src="images/sample-1.jpg">
+              <img src="https://www.nobelprize.org/nobel_prizes/peace/laureates/1964/images/mlk-white-house.jpg">
             </div>
             <div class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              <p>Martin Luther King, Jr. during a civil rights meeting at the White House, Washington DC, on 18 January 1964.</p>
             </div>
             <div class="card-action">
               <i class="material-icons">comment</i>
@@ -120,12 +129,13 @@
             </div>
           </div>
 
+          <!-- Image Card -->
           <div class="card">
             <div class="card-image">
               <img src="../frontEnd/app/src/resources/mlk-resources/lyndon-b-johnson-mlk.jpg" alt="Lyndon B Johnsons"/>
             </div>
             <div class="card-content">
-              <p>This is a very standard image card that can be seen. </p>
+              <p>President Lyndon B. Johnson (left) and Martin Luther King, Jr. in a meeting at the White House, 18 March 1966.</p>
             </div>
             <div class="card-action">
               <i class="material-icons">comment</i>
@@ -134,9 +144,10 @@
             </div>
           </div>
 
+          <!-- Video Card -->
           <div class="card">
             <div class="card-image">
-              <iframe align-content="center" width="560" height="315" src="https://www.youtube.com/embed/5r98tT0j1a0" frameborder="0" allowfullscreen></iframe>
+              <iframe align-content="center" width="580px" height="350px" src="https://www.youtube.com/embed/5r98tT0j1a0" frameborder="0" allowfullscreen></iframe>
             </div>
             <div class="card-content">
               <p>A basic video card. This is one I stole on youtube that has whats his face in it.</p>
@@ -151,9 +162,9 @@
     </div>
 
   </div>
-  <script>
+  <!-- <script>
     $(document).ready(() => test());
-  </script>
+  </script> -->
 </body>
 
 </html>
