Added Ids to sections

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -75,8 +75,8 @@
           <!-- BIOGRAPHY -->
 
           <div class="card-panel white">
-            <span class="grey-text">
-              <h4 style="color:black;">Martin Luther King, Jr.</h4> (January 15, 1929-April 4, 1968) was born Michael Luther King, Jr., but later had his name changed to Martin. His grandfather began the family's long tenure as pastors of the Ebenezer Baptist Church in Atlanta, serving from 1914 to 1931; his father has served from then until the present, and from 1960 until his death Martin Luther acted as co-pastor.<div class="content hideContent"> Martin Luther attended segregated public schools in Georgia, graduating from high school at the age of fifteen; he received the B. A. degree in 1948 from Morehouse College, a distinguished Negro institution of Atlanta from which both his father and grandfather had graduated. After three years of theological study at Crozer Theological Seminary in Pennsylvania where he was elected president of a predominantly white senior class, he was awarded the B.D. in 1951. With a fellowship won at Crozer, he enrolled in graduate studies at Boston University, completing his residence for the doctorate in 1953 and receiving the degree in 1955. In Boston he met and married Coretta Scott, a young woman of uncommon intellectual and artistic attainments. Two sons and two daughters were born into the family. </div>
+            <span id="biography" class="grey-text">
+              <h4 style="color:black;">Martin Luther King, Jr.</h4> (January 15, 1929-April 4, 1968) was born Michael Luther King, Jr., but later had his name changed to Martin. His grandfather began the family's long tenure as pastors of the Ebenezer Baptist Church in Atlanta, serving from 1914 to 1931; his father has served from then until the present, and from 1960 until his death Martin Luther acted as co-pastor.<div class="text-content short-text"> Martin Luther attended segregated public schools in Georgia, graduating from high school at the age of fifteen; he received the B. A. degree in 1948 from Morehouse College, a distinguished Negro institution of Atlanta from which both his father and grandfather had graduated. After three years of theological study at Crozer Theological Seminary in Pennsylvania where he was elected president of a predominantly white senior class, he was awarded the B.D. in 1951. With a fellowship won at Crozer, he enrolled in graduate studies at Boston University, completing his residence for the doctorate in 1953 and receiving the degree in 1955. In Boston he met and married Coretta Scott, a young woman of uncommon intellectual and artistic attainments. Two sons and two daughters were born into the family. </div>
             </span>
             <div class="show-more">
                 <a href="#">Show more</a>
@@ -104,7 +104,7 @@
         <!-- Text Card -->
         <div class="col s6 m7">
           <div class="card">
-            <div class="card-content">
+            <div id="lecture" class="card-content">
               <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
             </div>
             <div class="card-action">
@@ -164,7 +164,7 @@
   </div>
   <!-- <script>
     $(document).ready(() => test());
-  </script> -->
+  </script>  -->
 </body>
 
 </html>
