--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -46,12 +46,10 @@
       <div class="card">
           <div id="profile-page-header" class="card-image">
             <img src="https://www.nobelprize.org/images/front-quotes/for-the-greatest-benefit-splash.jpg" style="filter: brightness(60%)">
-
-            <!-- PICTURE GOES HERE -->
-
             <span class="card-title">
               <figure class="card-profile-image">
-                  <img src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 250px; height: 200px;";
+                  <img src="" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 250px; height: 200px;";>
+                  <!-- PICTURE GOES HERE -->
               </figure>
             </span>
           </div>
@@ -77,9 +75,9 @@
 
           <div class="card-panel white" >
             <span id="biography" class="grey-text text-container">
-              <h4 style="color:black;">Martin Luther King, Jr.</h4>
+              <h4 style="color:black;"> <!-- NAME --></h4>
               <div class="text-content short-text">
-                (January 15, 1929-April 4, 1968) was born Michael Luther King, Jr., but later had his name changed to Martin. His grandfather began the family's long tenure as pastors of the Ebenezer Baptist Church in Atlanta, serving from 1914 to 1931; his father has served from then until the present, and from 1960 until his death Martin Luther acted as co-pastor. Martin Luther attended segregated public schools in Georgia, graduating from high school at the age of fifteen; he received the B. A. degree in 1948 from Morehouse College, a distinguished Negro institution of Atlanta from which both his father and grandfather had graduated. After three years of theological study at Crozer Theological Seminary in Pennsylvania where he was elected president of a predominantly white senior class, he was awarded the B.D. in 1951. With a fellowship won at Crozer, he enrolled in graduate studies at Boston University, completing his residence for the doctorate in 1953 and receiving the degree in 1955. In Boston he met and married Coretta Scott, a young woman of uncommon intellectual and artistic attainments. Two sons and two daughters were born into the family.
+                <!-- BIOGRAPHY-TEXT -->
               </div>
               <div class="show-more">
                   <a href="#">Show more</a>
@@ -105,63 +103,22 @@
 
         <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
 
-        <!-- Text Card -->
-        <div class="col s6 m7">
-          <div class="card">
-            <div id="lecture" class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-            </div>
-            <div class="card-action">
-              <i class="material-icons">comment</i>
-              <i class="material-icons">thumb_up</i>
-              <i class="material-icons">share</i>
-            </div>
+        <!-- Image Card -->
+        <div class="card">
+          <div class="card-image">
+            <img src=""/>
+            <!-- Source image -->
           </div>
+          <div class="card-content">
+            <p> <!-- Information --> </p>
+          </div>
+          <div class="card-action">
+            <i class="material-icons">comment</i>
+            <i class="material-icons">thumb_up</i>
+            <i class="material-icons">share</i>
+          </div>
+        </div>
 
-          <!-- Image Card -->
-          <div class="card">
-            <div class="card-image">
-              <img src="https://www.nobelprize.org/nobel_prizes/peace/laureates/1964/images/mlk-white-house.jpg">
-            </div>
-            <div class="card-content">
-              <p>Martin Luther King, Jr. during a civil rights meeting at the White House, Washington DC, on 18 January 1964.</p>
-            </div>
-            <div class="card-action">
-              <i class="material-icons">comment</i>
-              <i class="material-icons">thumb_up</i>
-              <i class="material-icons">share</i>
-            </div>
-          </div>
-
-          <!-- Image Card -->
-          <div class="card">
-            <div class="card-image">
-              <img src="../frontEnd/app/src/resources/mlk-resources/lyndon-b-johnson-mlk.jpg" alt="Lyndon B Johnsons"/>
-            </div>
-            <div class="card-content">
-              <p>President Lyndon B. Johnson (left) and Martin Luther King, Jr. in a meeting at the White House, 18 March 1966.</p>
-            </div>
-            <div class="card-action">
-              <i class="material-icons">comment</i>
-              <i class="material-icons">thumb_up</i>
-              <i class="material-icons">share</i>
-            </div>
-          </div>
-
-          <!-- Video Card -->
-          <div class="card">
-            <div class="card-image">
-              <iframe align-content="center" width="580px" height="350px" src="https://www.youtube.com/embed/5r98tT0j1a0" frameborder="0" allowfullscreen></iframe>
-            </div>
-            <div class="card-content">
-              <p>A basic video card. This is one I stole on youtube that has whats his face in it.</p>
-            </div>
-            <div class="card-action">
-              <i class="material-icons">comment</i>
-              <i class="material-icons">thumb_up</i>
-              <i class="material-icons">share</i>
-            </div>
-          </div>
       </div>
     </div>
 
