--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -22,7 +22,7 @@
   <script src="./feed.js"></script>
 
   <!-- Connected JS File -->
-  <!-- <script src="./app.js"></script> -->
+  <script src="./app.js"></script>
 
 </head>
 
@@ -104,28 +104,14 @@
         <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
 
         <!-- Image Card -->
-        <div class="card">
-          <div class="card-image">
-            <img src=""/>
-            <!-- Source image -->
-          </div>
-          <div class="card-content">
-            <p> <!-- Information --> </p>
-          </div>
-          <div class="card-action">
-            <i class="material-icons">comment</i>
-            <i class="material-icons">thumb_up</i>
-            <i class="material-icons">share</i>
-          </div>
-        </div>
+      <div class="col s6 m7" id="cardContainer">
 
       </div>
     </div>
-
   </div>
-  <!-- <script>
-    $(document).ready(() => test());
-  </script>  -->
+  <script>
+    $(document).ready(() => controlFlow());
+  </script>
 </body>
 
 </html>
