Working test branch

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -90,6 +90,7 @@
           <!-- FRIENDS LIST -->
 
           <div class="card-panel white">
+            <h4 style="color:black;">Network</h4>
             <span class="grey-text friend-container">
               <div tooltip="Martin Luther King Jr. " tooltip-persistent><img class="image" src="../frontEnd/app/src/resources/mlk-resources/king_photo_01.jpg" alt="picture"/> </div>
               <img class="image" src="../frontEnd/app/src/resources/mlk-resources/monthly05.jpg" alt="picture2"/>
@@ -105,11 +106,13 @@
 
         <!-- THESE ARE THE CARDS WE WILL POPULATE (and create more) -->
 
-        <!-- Text Card -->
         <div class="col s6 m7">
           <div class="card">
-            <div id="lecture" class="card-content">
-              <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+            <div class="card-image">
+              <img src="https://www.nobelprize.org/nobel_prizes/peace/laureates/1964/images/mlk-white-house.jpg">
+            </div>
+            <div class="card-content">
+              <p>Martin Luther King, Jr. during a civil rights meeting at the White House, Washington DC, on 18 January 1964.</p>
             </div>
             <div class="card-action">
               <i class="material-icons">comment</i>
@@ -118,13 +121,10 @@
             </div>
           </div>
 
-          <!-- Image Card -->
+          <!-- Text Card -->
           <div class="card">
-            <div class="card-image">
-              <img src="https://www.nobelprize.org/nobel_prizes/peace/laureates/1964/images/mlk-white-house.jpg">
-            </div>
-            <div class="card-content">
-              <p>Martin Luther King, Jr. during a civil rights meeting at the White House, Washington DC, on 18 January 1964.</p>
+            <div id="lecture" class="card-content">
+              <p><h4>For Civil Rights and Social Justice</h4> Martin Luther King dreamt that all inhabitants of the United States would be judged by their personal qualities and not by the color of their skin. In April 1968 he was murdered by a white racist. Four years earlier, he had received the Peace Prize for his nonviolent campaign against racism. King adhered to Gandhi's philosophy of nonviolence. In 1955 he began his struggle to persuade the US Government to declare the policy of racial discrimination in the southern states unlawful. The racists responded with violence to the black people's nonviolent initiatives. In 1963, 250,000 demonstrators marched to the Lincoln Memorial in Washington, where King gave his famous "I have a dream" speech. The following year, President Johnson got a law passed prohibiting all racial discrimination. But King had powerful opponents. The head of the FBI, John Edgar Hoover, had him placed under surveillance as a communist, and when King opposed the administration's policy in Vietnam, he fell into disfavour with the President. It has still not been ascertained whether King's murderer acted on his own or was part of a conspiracy.</p>
             </div>
             <div class="card-action">
               <i class="material-icons">comment</i>
