--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -79,9 +79,9 @@
               <div class="text-content short-text">
                 <!-- BIOGRAPHY-TEXT -->
               </div>
-              <div class="show-more">
-                  <a href="#">Show more</a>
-              </div>
+              <!--<div class="show-more">-->
+                  <!--<a href="#">Show more</a>-->
+              <!--</div>-->
             </span>
           </div>
 
