--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -110,7 +110,7 @@
     </div>
   </div>
   <script>
-    $(document).ready(() => controlFlow());
+    $(document).ready(function () { controlFlow()});
   </script>
 </body>
 
