#nofilter profile pictures done #bestcodeever

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -48,7 +48,7 @@
             <img src="https://www.nobelprize.org/images/front-quotes/for-the-greatest-benefit-splash.jpg" style="filter: brightness(60%)">
             <span class="card-title">
               <figure class="card-profile-image">
-                  <img src="" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 250px; height: 200px;";>
+                  <img id="profilPic" src="" alt="profile image" class="circle z-depth-2 responsive-img activator"   style="width: 250px; height: 200px;";>
                   <!-- PICTURE GOES HERE -->
               </figure>
             </span>
