Adds dynamic bio

--- a/newFrontEnd/app.html
+++ b/newFrontEnd/app.html
@@ -54,7 +54,7 @@
             </span>
           </div>
           <div>
-            <nav class="card-content" style="background-color: darkblue;">
+            <nav class="card-content blue darken-4">
               <div class="col s8 push-s4">
                 <ul class="tabs tabs-transparent">
                   <li class="tab"><a class="active" href="#test1">Timeline</a></li>
@@ -74,9 +74,9 @@
           <!-- BIOGRAPHY -->
 
           <div class="card-panel white" >
-            <span id="biography" class="grey-text text-container">
-              <h4 style="color:black;"> <!-- NAME --></h4>
-              <div class="text-content short-text">
+            <span class="grey-text text-container">
+              <h4 id="laureate-Name" style="color:black;"> <!-- NAME --></h4>
+              <div id="biography" class="text-content short-text">
                 <!-- BIOGRAPHY-TEXT -->
               </div>
               <!--<div class="show-more">-->
